--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^7.3.1",
     "typescript": "~3.9.3",
-    "vue-jest": "^5.0.0-0"
+    "vue-jest": "^5.0.0-0",
+    "webpack": "^4.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
